--- a/androidApp/src/main/res/values/styles.xml
+++ b/androidApp/src/main/res/values/styles.xml
@@ -6,4 +6,11 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <!-- custom navigation bar -->
+    <style name="BottomNavigationStyle" parent="Widget.Design.BottomNavigationView">
+        <item name="android:textColor">@color/darkGreen</item>
+        <item name="android:textSize">18sp</item>
+        <item name="fontFamily">@font/arial</item>
+    </style>
+
 </resources>
