--- a/androidApp/src/main/res/layout/activity_main.xml
+++ b/androidApp/src/main/res/layout/activity_main.xml
@@ -63,7 +63,7 @@
     <FrameLayout
         android:layout_height="0dp"
         android:layout_width="match_parent"
-        app:layout_constraintBottom_toTopOf="@+id/navigation_view"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavBar"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         />
 
