--- a/androidApp/src/main/res/layout/item_vertical_fridges.xml
+++ b/androidApp/src/main/res/layout/item_vertical_fridges.xml
@@ -1,52 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent"
+    android:id="@+id/card_view"
+    android:layout_gravity="center">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="2dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <ImageView
-                android:id="@+id/thermometer"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/temperature" />
-
-            <ImageView
-                android:id="@+id/water_droplet"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/thermometer"
-                android:layout_margin="5dp"
-                android:scaleType="centerCrop"
-                android:src="@drawable/water_droplet" />
-
-        </RelativeLayout>
-    </androidx.cardview.widget.CardView>
-
-    <!--
-    <View
-        android:id="@+id/line_separator_images"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="3dp"
-        android:background="@color/cyan_blue"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    -->
+        android:layout_height="wrap_content">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/card_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:text="@string/first_name_component_title"
+            />
+
+        <ImageView
+            android:id="@+id/thermometer"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="60dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="15dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/temperature" />
+
+        <ImageView
+            android:id="@+id/water_droplet"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_below="@+id/thermometer"
+            android:layout_marginStart="15dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginBottom="15dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/water_droplet" />
+
+        <View
+            android:id="@+id/line_separator_images"
+            android:layout_width="wrap_content"
+            android:layout_height="3dp"
+            android:background="@color/cyan_blue" />
+
+
+    </RelativeLayout>
+
+</androidx.cardview.widget.CardView>
+
