--- a/androidApp/src/main/res/layout/fragment_home.xml
+++ b/androidApp/src/main/res/layout/fragment_home.xml
@@ -20,8 +20,9 @@
         />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/vertical_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="250dp"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
 
