EDIT : Forms Add Aliment
I Change position element , add button return page product and defined lenght input

--- a/androidApp/src/main/res/layout/activity_forms_add_aliments.xml
+++ b/androidApp/src/main/res/layout/activity_forms_add_aliments.xml
@@ -1,23 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:ignore="LabelFor"
     tools:context=".FormsAddAliments">
+
+
     <LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/form_add_aliment_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:gravity="center"
-        android:id="@+id/form_add_aliment_layout"
-        >
+        android:orientation="vertical">
+
+
+        <Button
+            android:id="@+id/button_return_list_product"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/btn_return_product"
+            android:textColor="@color/light_green"
+            android:drawableLeft="@drawable/ic_arrow_left"
+            android:drawableStart="@drawable/ic_arrow_left"/>
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="672dp"
             android:orientation="vertical">
 
             <TextView
@@ -26,28 +35,33 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:background="@color/light_green"
-                android:elevation="15dp"
+                android:elevation="1dp"
                 android:gravity="center"
                 android:padding="10dp"
-                android:text="Ajouter un Aliment"
+                android:text="@string/title_forms_add"
                 android:textColor="@color/white"
                 android:textSize="19sp"
                 android:textStyle="bold" />
 
             <TextView
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:id="@+id/text_name"
                 android:layout_width="363dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/arial"
 
                 android:lineSpacingExtra="8sp"
-                android:text="Nom du Produit"
+                android:text="@string/text_name"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:typeface="normal" />
 
             <EditText
                 android:id="@+id/AlimentName"
+                android:maxLength="30"
+
+                android:autofillHints="aliment name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
@@ -55,7 +69,6 @@
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/shape_background"
-                android:hint="Nom du produit : "
                 android:inputType="textPersonName"
                 android:padding="15dp"
                 android:textColor="@color/light_green"
@@ -68,14 +81,17 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/arial"
                 android:lineSpacingExtra="8sp"
-                android:text="Quantité                                                          gr"
+                android:text="@string/text_quantite"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:typeface="normal" />
+                android:typeface="normal"
+            />
 
             <EditText
                 android:id="@+id/AlimentQuantite"
+                android:maxLength="4"
 
+                android:autofillHints="aliment quantite"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="15dp"
@@ -83,7 +99,6 @@
                 android:layout_marginRight="15dp"
                 android:layout_marginBottom="5dp"
                 android:background="@drawable/shape_background"
-                android:hint="Quantité du produit (GR) : "
                 android:inputType="number"
                 android:padding="15dp"
                 android:textColor="@color/light_green"
@@ -93,14 +108,38 @@
             <TextView
                 android:id="@+id/text_date"
                 android:layout_width="363dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
 
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/arial"
                 android:lineSpacingExtra="8sp"
-                android:text="Date de Péremption                          JJ/MM/AAAA"
+                android:text="@string/text_date"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:typeface="normal" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                >
+
+                <Button
+
+                    android:id="@+id/button_date_select"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="@string/btn_date" />
+
+                <TextView
+                    android:id="@+id/dateTv"
+                    android:layout_width="196dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:textSize="30sp" />
+
+            </LinearLayout>
 
 
             <!--
@@ -122,43 +161,29 @@
                 android:textStyle="bold" />
 
                 -->
-
-            <Button
-
-                android:id="@+id/button_date_select"
-                android:layout_width="283dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="Choisir Date" />
-
-            <TextView
-                android:id="@+id/dateTv"
-                android:layout_width="340dp"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-
-                android:text="Date"
-                android:textSize="30sp" />
-
             <TextView
                 android:id="@+id/text_categorie"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:layout_width="345dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/arial"
                 android:lineSpacingExtra="8sp"
-                android:text="Catégorie"
+                android:text="@string/text_categorie"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:typeface="normal" />
+
 
             <Spinner
                 android:id="@+id/categorie_spinner"
                 android:layout_width="325dp"
                 android:layout_height="wrap_content"
-                android:spinnerMode="dialog"
-                android:padding="15dp"/>
-
-
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:padding="15dp"
+                android:spinnerMode="dialog" />
 
 
             <!--
@@ -181,11 +206,13 @@
 
             <TextView
                 android:id="@+id/text_storage"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:layout_width="345dp"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/arial"
                 android:lineSpacingExtra="8sp"
-                android:text="Lieu de Stockage"
+                android:text="@string/text_storage"
                 android:textSize="16sp"
                 android:textStyle="bold"
                 android:typeface="normal" />
@@ -193,22 +220,27 @@
 
             <Spinner
                 android:id="@+id/place_spinner"
-                android:layout_width="294dp"
+                android:layout_width="325dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_height="wrap_content"
+                android:padding="15dp"
                 android:spinnerMode="dialog"
-                android:padding="15dp"/>
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+
+                />
 
             <Button
                 android:id="@+id/button_add_aliment"
-                android:layout_width="wrap_content"
+                android:layout_width="123dp"
                 android:layout_height="wrap_content"
-                android:text="Ajouter" />
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
+                android:text="@string/btn_add" />
 
 
         </LinearLayout>
-
-
-
 
 
     </LinearLayout>
