--- a/androidApp/src/main/res/layout/item_vertical_fridges.xml
+++ b/androidApp/src/main/res/layout/item_vertical_fridges.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view"
     android:layout_gravity="center"
@@ -12,14 +12,6 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:background="@color/beige">
-
-        <TextView
-            android:id="@+id/title_card"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_centerHorizontal="true"
-            android:text="@string/first_name_component_title" />
 
         <ImageView
             android:id="@+id/thermometer"
@@ -32,7 +24,7 @@
             android:layout_marginRight="15dp"
             android:layout_marginBottom="15dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/temperature" />
+            android:src="@drawable/temperature"/>
 
         <ImageView
             android:id="@+id/water_droplet"
@@ -49,6 +41,15 @@
             android:src="@drawable/water_droplet" />
 
         <TextView
+            android:id="@+id/title_card"
+            style="style/MainTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="20dp"
+            android:text="@string/first_name_component_title" />
+
+        <TextView
             android:id="@+id/temperature_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -57,7 +58,8 @@
             android:layout_marginLeft="80dp"
             android:text="@string/temperature"
             android:layout_alignStart="@+id/thermometer"
-            android:layout_marginStart="80dp" />
+            android:layout_marginStart="80dp"
+            style="@style/Subtitles"/>
 
         <TextView
             android:id="@+id/hygrometry_text"
@@ -68,18 +70,20 @@
             android:layout_marginLeft="80dp"
             android:text="@string/hygrometry"
             android:layout_alignStart="@+id/water_droplet"
-            android:layout_marginStart="80dp" />
+            android:layout_marginStart="80dp"
+            style="@style/Subtitles"/>
 
         <TextView
             android:id="@+id/temperature_number"
+            style="@style/PoliceHomeCardView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_above="@+id/line_separator_images_v3"
             android:layout_alignStart="@+id/water_droplet"
             android:layout_alignLeft="@+id/temperature_text"
-            android:layout_marginLeft="300dp"
-            android:text="@string/degree"
-            android:layout_marginStart="300dp" />
+            android:layout_marginStart="250dp"
+            android:layout_marginLeft="250dp"
+            android:text="@string/degree" />
 
         <TextView
             android:id="@+id/hygrometry_number"
@@ -88,12 +92,10 @@
             android:layout_above="@+id/line_separator_images_v4"
             android:layout_alignStart="@+id/water_droplet"
             android:layout_alignLeft="@+id/temperature_text"
-            android:layout_marginLeft="300dp"
+            android:layout_marginLeft="250dp"
             android:text="@string/percentage"
-            android:layout_marginStart="300dp" />
-
-
-
+            android:layout_marginStart="250dp"
+            style="@style/PoliceHomeCardView"/>
 
 
         <!-- All views of the card -->
