--- a/androidApp/src/main/res/values/colors.xml
+++ b/androidApp/src/main/res/values/colors.xml
@@ -16,6 +16,7 @@
     <color name="dark_green">#008037</color>
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
+    <color name="dark_blue">#5376c1</color>
 
 
 </resources>
