--- a/androidApp/src/main/res/values/styles.xml
+++ b/androidApp/src/main/res/values/styles.xml
@@ -13,4 +13,25 @@
         <item name="fontFamily">@font/arial</item>
     </style>
 
+
+    <!-- Page title -->
+    <style name="pageTitle">
+        <item name="android:textColor">@color/darkGreen</item>
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <!-- product list font -->
+    <style name="product_list">
+        <item name="android:textColor">#373636</item>
+        <item name="android:textSize">12sp</item>
+    </style>
+
+    <!-- search bar for products -->
+    <style name="product_search">
+        <item name="colorControlNormal">@color/light_green</item>
+        <item name="colorControlActivated">@color/dark_green</item>
+        <item name="colorControlHighlight">@color/dark_green</item>
+    </style>
+
 </resources>
