--- a/androidApp/src/main/res/values/styles.xml
+++ b/androidApp/src/main/res/values/styles.xml
@@ -20,6 +20,10 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <!--  Forms Page add -->
+
+
+
     <!-- product list font -->
     <style name="product_list">
         <item name="android:textColor">#373636</item>
