--- a/androidApp/src/main/res/drawable/ic_arrow_left.xml
+++ b/androidApp/src/main/res/drawable/ic_arrow_left.xml
@@ -1,5 +1,6 @@
-<vector android:height="10dp" android:tint="#3F403F"
-    android:viewportHeight="24" android:viewportWidth="24"
-    android:width="10dp" xmlns:android="http://schemas.android.com/apk/res/android">
+<vector android:height="25dp" android:tint="#67D25D"
+    android:viewportHeight="24" android:viewportWidth="15"
+
+    android:width="50px" xmlns:android="http://schemas.android.com/apk/res/android">
     <path android:fillColor="@android:color/white" android:pathData="M17.77,3.77l-1.77,-1.77l-10,10l10,10l1.77,-1.77l-8.23,-8.23z"/>
 </vector>
