EDIT : Forms Add Aliment I have adapted the size of the return button on the product page so that they take the place of request And the spinners are centered and we have an arrow + text in bold and black

--- a/androidApp/src/main/res/values/styles.xml
+++ b/androidApp/src/main/res/values/styles.xml
@@ -22,6 +22,12 @@
 
     <!--  Forms Page add -->
 
+    <!--Spinner Background-->
+    <style name="SpinnerTheme" parent="android:Widget.Spinner">
+        <item name="android:background">@drawable/spinner_background</item>
+    </style>
+
+
 
 
     <!-- product list font -->
