--- a/androidApp/src/main/res/layout/item_product.xml
+++ b/androidApp/src/main/res/layout/item_product.xml
@@ -6,7 +6,7 @@
 
     <!-- product name -->
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/product_name"
         android:layout_width="@dimen/product_name_width"
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/table_cell_padding"
@@ -21,7 +21,7 @@
 
     <!-- product location -->
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/product_location"
         android:layout_width="@dimen/location_name_width"
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/table_cell_padding"
@@ -31,13 +31,13 @@
         android:gravity="center"
         android:text="@string/product_emplacement"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView2"
+        app:layout_constraintStart_toEndOf="@+id/product_name"
         app:layout_constraintTop_toTopOf="parent"
         style="@style/product_list" />
 
     <!-- product expiration period -->
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/expiration_period"
         android:layout_width="@dimen/expiration_date_width"
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/table_cell_padding"
@@ -47,13 +47,13 @@
         android:gravity="center"
         android:text="@string/product_expiration_date"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintStart_toEndOf="@+id/product_location"
         app:layout_constraintTop_toTopOf="parent"
         style="@style/product_list" />
 
     <!-- product color -->
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/product_status"
         android:layout_width="10dp"
         android:layout_height="10dp"
         android:layout_marginEnd="@dimen/default_margin"
