--- a/androidApp/src/main/res/values/styles.xml
+++ b/androidApp/src/main/res/values/styles.xml
@@ -44,4 +44,11 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+
+    <!-- Fors Add Page  -->
+    <!--Spinner Background-->
+    <style name="SpinnerTheme" parent="android:Widget.Spinner">
+        <item name="android:background">@drawable/spinner_background</item>
+    </style>
+
 </resources>
