EDIT : TextView and Spinner
I change my TextView place for add infos like maximum , unit weight ... and my spinner colors

--- a/androidApp/src/main/res/values/styles.xml
+++ b/androidApp/src/main/res/values/styles.xml
@@ -45,10 +45,11 @@
     </style>
 
 
-    <!-- Fors Add Page  -->
+    <!-- Forms Add Page  -->
     <!--Spinner Background-->
     <style name="SpinnerTheme" parent="android:Widget.Spinner">
         <item name="android:background">@drawable/spinner_background</item>
+
     </style>
 
 </resources>
