--- a/androidApp/src/main/res/drawable/ic_arrow_left.xml
+++ b/androidApp/src/main/res/drawable/ic_arrow_left.xml
@@ -1,5 +1,12 @@
-<vector android:height="15dp" android:tint="@color/light_green"
-    android:viewportHeight="30" android:viewportWidth="24"
-    android:width="50px" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="@android:color/white" android:pathData="M17.77,3.77l-1.77,-1.77l-10,10l10,10l1.77,-1.77l-8.23,-8.23z"/>
+<vector xmlns:tools="http://schemas.android.com/tools"
+    android:height="24dp" android:tint="#67D28D"
+    android:viewportHeight="24" android:viewportWidth="35"
+    android:width="35sp"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+
+    >
+
+    <path android:fillColor="@android:color/white" android:pathData="M11.67,3.87L9.9,2.1 0,12l9.9,9.9 1.77,-1.77L3.54,12z"
+        tools:ignore="VectorRaster" />
+
 </vector>
