--- a/androidApp/src/main/res/drawable/rounded_edittext.xml
+++ b/androidApp/src/main/res/drawable/rounded_edittext.xml
@@ -2,7 +2,7 @@
 <!--  res/drawable/rounded_edittext.xml -->
 <shape xmlns:Android="http://schemas.android.com/apk/res/android"
     Android:shape="rectangle" Android:padding="10dp">
-    <solid Android:color="@color/light_grey"/>
+    <solid Android:color="@color/beige"/>
     <corners
         Android:bottomRightRadius="15dp"
         Android:bottomLeftRadius="15dp"
