--- a/androidApp/src/main/res/values/colors.xml
+++ b/androidApp/src/main/res/values/colors.xml
@@ -7,8 +7,8 @@
     <color name="grey">#666666</color>
     <color name="darkGreen">#006400</color>
     <color name="orange">#FFC300</color>
-    <color name="red">#FF1F1F</color>
-    <color name="light_grey">#EDDEDE</color>
+    <color name="red">#FF0000</color>
+    <color name="light_grey">#d9d9d9</color>
     <color name="dark_grey">#534F4F</color>
 
 
