ADD : product pop-up
In this commit, the pop-up (cf. ProductPopup.kt) for the product page was added (cf. ProductFragment.kt, ProductAdapter.kt).
Other things that changed:
	* 'ProductRepository' is now an object for the sake of convenience (previous a class) (cf. ProductRepository.kt)
	* the little round next to each product changes color according to the expiration date
	* the expiration period is now shown in 'years', 'months' and 'days' (cf. ProductRepository.kt)
	* the product list design changes a little (cf. ProductAdapter.kt)

For more information, please refer to : https://trello.com/c/czQVkl30/9-us-02-ajouter-et-supprimer-des-aliments-manuellement

--- a/androidApp/src/main/res/values/colors.xml
+++ b/androidApp/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="red">#FF0000</color>
     <color name="light_grey">#d9d9d9</color>
     <color name="dark_grey">#534F4F</color>
+    <color name="delete_red">#FF6B6B</color>
 
 
     <!-- Colors for the application : from the original maquette -->
