--- a/androidApp/src/main/res/values/styles.xml
+++ b/androidApp/src/main/res/values/styles.xml
@@ -20,6 +20,25 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <!-- Product pop-up -->
+    <style name="popup_title">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="popup_subtitle">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="popup_default">
+        <item name="android:textColor">@color/grey</item>
+        <item name="android:textSize">13sp</item>
+        <item name="android:textStyle">normal</item>
+    </style>
+
     <!-- product list font -->
     <style name="product_list">
         <item name="android:textColor">#373636</item>
@@ -44,8 +63,7 @@
         <item name="android:textSize">14sp</item>
     </style>
 
-
-    <!-- Forms Add Page  -->
+    <!-- Form Add Page  -->
     <!--Spinner Background-->
     <style name="SpinnerTheme" parent="android:Widget.Spinner">
         <item name="android:background">@drawable/spinner_background</item>
