ADD : Sign up of the user
This new feature allows the user to create an account.
We can find several informations in this form : username, password and email.

--- a/androidApp/src/main/res/values/colors.xml
+++ b/androidApp/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="dark_blue">#5376c1</color>
+    <color name="dark_grey_v2">#83919c</color>
 
 
 </resources>
