--- a/androidApp/src/main/res/values/styles.xml
+++ b/androidApp/src/main/res/values/styles.xml
@@ -70,4 +70,20 @@
 
     </style>
 
+    <!-- Main title of the page sign up -->
+    <style name="main_title_sign_up_page">
+        <item name="android:textSize">38sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/darkGreen</item>
+
+    </style>
+
+    <!-- Confirm title of the page sign up -->
+    <style name="subtitles_sign_up_page">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/darkGreen</item>
+
+    </style>
+
+
 </resources>
