ADD : Backend of sign up form
Allows the user to sign up and get a account.

EDIT : Conflicts with dimens.xml resolved

No more conflicts.

EDIT : Rebase to develop

Nothing to say.

--- a/androidApp/src/main/res/values/dimens.xml
+++ b/androidApp/src/main/res/values/dimens.xml
@@ -16,7 +16,10 @@
     <!-- Product pop-up -->
     <dimen name="icon_dimensions">40dp</dimen>
     <dimen name="product_characteristics">160dp</dimen>
+
     <dimen name="popup_button_height">35dp</dimen>
     <dimen name="popup_button_width">110dp</dimen>
     <dimen name="button_side_margin">20dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+
 </resources>
