EDIT : Link Login page
Link between the login page, forgotten password and registration

--- a/androidApp/src/main/res/layout/fragment_login.xml
+++ b/androidApp/src/main/res/layout/fragment_login.xml
@@ -72,7 +72,7 @@
             android:drawablePadding="15dp"/>
 
         <TextView
-
+            android:id="@+id/forgotPassword"
             android:textSize="16sp"
             android:autoLink="web"
             android:clickable="true"
